Inching toward a client

--- a/vamp-client/Makefile
+++ b/vamp-client/Makefile
@@ -2,6 +2,6 @@
 VAMPSDK_DIR	:= ../../vamp-plugin-sdk
 PIPER_DIR	:= ../../piper
 
-CXXFLAGS = -I$(VAMPSDK_DIR)
+CXXFLAGS = -I$(VAMPSDK_DIR) -I..
 
 client:	client.cpp
