--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ addons:
       - qt5-default
       
 before_install:
+  - ( cd ../ ; git clone https://github.com/piper-audio/piper )
   - ( cd ../ ; hg clone https://code.soundsoftware.ac.uk/hg/vamp-plugin-sdk )
   - ( cd ../vamp-plugin-sdk ; ./configure && make sdkstatic )
   - ( cd ../ ; git clone https://github.com/sandstorm-io/capnproto )
