--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ before_install:
   - ( cd ../ ; git clone https://github.com/piper-audio/piper )
   - ( cd ../ ; hg clone https://code.soundsoftware.ac.uk/hg/vamp-plugin-sdk )
   - ( cd ../ ; git clone https://github.com/sandstorm-io/capnproto )
+  - if [[ "$TRAVIS_OS_NAME" = "linux" ]] ; then ( cd ../capnproto ; git checkout v0.6.1 ) ; fi
   - ( cd ../capnproto/c++ ; ./setup-autotools.sh && autoreconf -i )
   - ( cd ../capnproto/c++ ; ./configure && make && sudo make install )
   - if [[ "$TRAVIS_OS_NAME" = "osx" ]] ; then brew update ; fi
